--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Houseplant Hub</title>
-        <meta name="name" content="Prof. Barnett">
+        <meta name="name" content="Vismaya Jacob">
         <meta name="description" content="More practice for students in GIT215 with CSS Flexbox and Grid styles on a webpage. This is a site for a fake plant store.">
 
         <!-- Favicon -->
@@ -14,8 +14,8 @@
         <link rel="stylesheet" href="https://use.typekit.net/zer5nbh.css">
 
         <!-- Custom Stylesheet -->
-        <!-- TO DO - ADD LINK TO STYLESHEET -->
-    
+        <link href="styles.css" rel="stylesheet">
+        
     </head>
     <body id="top">
         <header>
